--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "alembic>=1.15.2",
     "flask>=3.1.1",
+    "flask-cors>=6.0.0",
     "flask-migrate>=4.1.0",
     "flask-sqlalchemy>=3.1.1",
     "pgvector>=0.4.1",
