➕ add: gunicorn package

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "flask-cors>=6.0.0",
     "flask-migrate>=4.1.0",
     "flask-sqlalchemy>=3.1.1",
+    "gunicorn>=23.0.0",
     "pgvector>=0.4.1",
     "psycopg2-binary>=2.9.10",
     "python-dotenv>=1.1.0",
