--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "flask-restx>=1.3.0",
     "flask-sqlalchemy>=3.1.1",
     "gunicorn>=23.0.0",
+    "openai>=1.79.0",
     "pgvector>=0.4.1",
     "psycopg2-binary>=2.9.10",
     "python-dotenv>=1.1.0",
