--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "flask>=3.1.1",
     "flask-cors>=6.0.0",
     "flask-migrate>=4.1.0",
+    "flask-restx>=1.3.0",
     "flask-sqlalchemy>=3.1.1",
     "gunicorn>=23.0.0",
     "pgvector>=0.4.1",
