--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,10 @@ dependencies = [
     "openai>=1.79.0",
     "pgvector>=0.4.1",
     "psycopg2-binary>=2.9.10",
+    "pytest>=8.3.5",
+    "pytest-cov>=6.1.1",
+    "pytest-ordering>=0.6",
     "python-dotenv>=1.1.0",
+    "sqlalchemy-utils>=0.41.2",
     "tavily-python>=0.7.2",
 ]
