--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ dependencies = [
     "flask-restx>=1.3.0",
     "flask-sqlalchemy>=3.1.1",
     "gunicorn>=23.0.0",
+    "langchain-google-community>=2.0.7",
+    "langgraph>=0.4.5",
     "openai>=1.79.0",
     "pgvector>=0.4.1",
     "psycopg2-binary>=2.9.10",
