--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,13 @@ dependencies = [
     "alembic>=1.15.2",
     "flask>=3.1.1",
     "flask-cors>=6.0.0",
+    "flask-jwt-extended>=4.7.1",
     "flask-migrate>=4.1.0",
     "flask-restx>=1.3.0",
     "flask-sqlalchemy>=3.1.1",
+    "google-auth>=2.40.1",
+    "google-auth-httplib2>=0.2.0",
+    "google-auth-oauthlib>=1.2.2",
     "gunicorn>=23.0.0",
     "openai>=1.79.0",
     "pgvector>=0.4.1",
