main merge용 브랜치

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ dependencies = [
     "google-auth-httplib2>=0.2.0",
     "google-auth-oauthlib>=1.2.2",
     "gunicorn>=23.0.0",
+    "langchain-google-community>=2.0.7",
+    "langchain-openai>=0.3.17",
+    "langgraph>=0.4.5",
     "openai>=1.79.0",
     "pgvector>=0.4.1",
     "psycopg2-binary>=2.9.10",
