--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,4 +23,5 @@ dependencies = [
     "pgvector>=0.4.1",
     "psycopg2-binary>=2.9.10",
     "python-dotenv>=1.1.0",
+    "tavily-python>=0.7.2",
 ]
