--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,10 @@ dependencies = [
     "google-auth-httplib2>=0.2.0",
     "google-auth-oauthlib>=1.2.2",
     "gunicorn>=23.0.0",
+    "langchain>=0.3.25",
+    "langchain-community>=0.3.24",
+    "langchain-core>=0.3.61",
+    "langchain-experimental>=0.3.4",
     "langchain-google-community>=2.0.7",
     "langchain-openai>=0.3.17",
     "langgraph>=0.4.5",
