--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,4 +32,5 @@ dependencies = [
     "python-dotenv>=1.1.0",
     "sqlalchemy-utils>=0.41.2",
     "tavily-python>=0.7.2",
+    "tzdata>=2025.2",
 ]
