--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "pytest-cov>=6.1.1",
     "pytest-ordering>=0.6",
     "python-dotenv>=1.1.0",
+    "redis>=6.2.0",
     "sqlalchemy-utils>=0.41.2",
     "tavily-python>=0.7.2",
     "tzdata>=2025.2",
