--- a/.github/workflows/main_seobi-backend.yml
+++ b/.github/workflows/main_seobi-backend.yml
@@ -94,7 +94,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    # needs: build
+    needs: build
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
