--- a/.github/workflows/main_seobi-backend.yml
+++ b/.github/workflows/main_seobi-backend.yml
@@ -41,6 +41,16 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Create SSL certificate directory
+        run: mkdir -p certs
+
+      - name: Generate self-signed SSL certificate
+        run: |
+          openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
+            -keyout certs/certificate.key \
+            -out certs/certificate.pem \
+            -subj "/C=KR/ST=Seoul/L=Seoul/O=Seobi/CN=localhost"
+
       - name: Set up Python version
         uses: actions/setup-python@v5
         with:
