--- a/.github/workflows/main_seobi-backend.yml
+++ b/.github/workflows/main_seobi-backend.yml
@@ -16,6 +16,8 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    environment:
+      name: 'Test'
     env:
       FLASK_APP: app
       FLASK_ENV: testing
