--- a/.github/workflows/main_seobi-backend.yml
+++ b/.github/workflows/main_seobi-backend.yml
@@ -18,6 +18,9 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: 'Test'
+    permissions:
+      id-token: write  # Azure 로그인을 위한 OIDC 토큰 권한
+      contents: read   # 코드 체크아웃을 위한 권한
     env:
       FLASK_APP: app
       FLASK_ENV: testing
@@ -78,14 +81,15 @@ jobs:
         run: |
           curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
 
+      - name: Login to Azure
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_BBAB0F361FDA43C1B4376933ED75D1C5 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_FB9EAA41DABA41D29AD25B07B6C83945 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_C0861A7203604D68AB663E67494A9D9F }}
+
       - name: Add GitHub Runner IP to PostgreSQL firewall
         run: |
-          # Azure에 로그인
-          az login --service-principal \
-            --username ${{ secrets.AZUREAPPSERVICE_CLIENTID_BBAB0F361FDA43C1B4376933ED75D1C5 }} \
-            --password ${{ secrets.AZUREAPPSERVICE_CLIENTID_SECRET }} \
-            --tenant ${{ secrets.AZUREAPPSERVICE_TENANTID_FB9EAA41DABA41D29AD25B07B6C83945 }}
-          
           # 현재 IP 주소 가져오기
           RUNNER_IP=$(curl -s https://api.ipify.org)
           echo "GitHub Runner IP: $RUNNER_IP"
@@ -189,7 +193,6 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip
 
-      
       - name: Login to Azure
         uses: azure/login@v2
         with:
