--- a/.github/workflows/main_seobi-backend.yml
+++ b/.github/workflows/main_seobi-backend.yml
@@ -14,13 +14,75 @@ on:
   workflow_dispatch:
 
 jobs:
-  test:
+  setup-test-env:
+    if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
     environment:
-      name: 'Production'  # Azure 인증을 위한 환경
+      name: 'Production'
     permissions:
-      id-token: write  # Azure 로그인을 위한 OIDC 토큰 권한
-      contents: read   # 코드 체크아웃을 위한 권한
+      id-token: write
+      contents: read
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install Azure CLI
+        run: |
+          curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
+
+      - name: Login to Azure
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_BBAB0F361FDA43C1B4376933ED75D1C5 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_FB9EAA41DABA41D29AD25B07B6C83945 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_C0861A7203604D68AB663E67494A9D9F }}
+
+      - name: Add GitHub Runner IP to PostgreSQL firewall
+        run: |
+          # 현재 IP 주소 가져오기
+          RUNNER_IP=$(curl -s https://api.ipify.org)
+          echo "GitHub Runner IP: $RUNNER_IP"
+          
+          # PostgreSQL 서버 이름과 리소스 그룹 가져오기 (호스트명에서 추출)
+          PGHOST=${{ secrets.TEST_PGHOST }}
+          SERVER_NAME=$(echo $PGHOST | cut -d'.' -f1)
+          RESOURCE_GROUP=$(az postgres flexible-server list --query "[?fullyQualifiedDomainName=='$PGHOST'].resourceGroup" -o tsv)
+          
+          if [ -z "$RESOURCE_GROUP" ]; then
+            echo "Error: Could not find resource group for PostgreSQL server"
+            exit 1
+          fi
+          
+          echo "PostgreSQL Server: $SERVER_NAME"
+          echo "Resource Group: $RESOURCE_GROUP"
+          
+          # 방화벽 규칙 이름 생성 (GitHub Actions Runner IP)
+          RULE_NAME="github-actions-runner-$(date +%Y%m%d%H%M%S)"
+          
+          # 방화벽 규칙 추가
+          echo "Adding firewall rule: $RULE_NAME for IP: $RUNNER_IP"
+          az postgres flexible-server firewall-rule create \
+            --resource-group $RESOURCE_GROUP \
+            --name $SERVER_NAME \
+            --rule-name $RULE_NAME \
+            --start-ip-address $RUNNER_IP \
+            --end-ip-address $RUNNER_IP
+          
+          # 방화벽 규칙이 추가될 때까지 잠시 대기
+          echo "Waiting for firewall rule to take effect..."
+          sleep 10
+          
+          # 방화벽 규칙 목록 출력
+          echo "Current firewall rules:"
+          az postgres flexible-server firewall-rule list \
+            --resource-group $RESOURCE_GROUP \
+            --name $SERVER_NAME
+
+  run-tests:
+    if: github.event_name == 'pull_request'
+    needs: setup-test-env
+    runs-on: ubuntu-latest
+    environment:
+      name: 'Test'
     env:
       FLASK_APP: app
       FLASK_ENV: testing
@@ -76,58 +138,6 @@ jobs:
           source .venv/bin/activate
           uv add -r requirements.txt
           uv add pytest pytest-cov
-
-      - name: Install Azure CLI
-        run: |
-          curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
-
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_BBAB0F361FDA43C1B4376933ED75D1C5 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_FB9EAA41DABA41D29AD25B07B6C83945 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_C0861A7203604D68AB663E67494A9D9F }}
-
-      - name: Add GitHub Runner IP to PostgreSQL firewall
-        run: |
-          # 현재 IP 주소 가져오기
-          RUNNER_IP=$(curl -s https://api.ipify.org)
-          echo "GitHub Runner IP: $RUNNER_IP"
-          
-          # PostgreSQL 서버 이름과 리소스 그룹 가져오기 (호스트명에서 추출)
-          PGHOST=${{ secrets.TEST_PGHOST }}
-          SERVER_NAME=$(echo $PGHOST | cut -d'.' -f1)
-          RESOURCE_GROUP=$(az postgres flexible-server list --query "[?fullyQualifiedDomainName=='$PGHOST'].resourceGroup" -o tsv)
-          
-          if [ -z "$RESOURCE_GROUP" ]; then
-            echo "Error: Could not find resource group for PostgreSQL server"
-            exit 1
-          fi
-          
-          echo "PostgreSQL Server: $SERVER_NAME"
-          echo "Resource Group: $RESOURCE_GROUP"
-          
-          # 방화벽 규칙 이름 생성 (GitHub Actions Runner IP)
-          RULE_NAME="github-actions-runner-$(date +%Y%m%d%H%M%S)"
-          
-          # 방화벽 규칙 추가
-          echo "Adding firewall rule: $RULE_NAME for IP: $RUNNER_IP"
-          az postgres flexible-server firewall-rule create \
-            --resource-group $RESOURCE_GROUP \
-            --name $SERVER_NAME \
-            --rule-name $RULE_NAME \
-            --start-ip-address $RUNNER_IP \
-            --end-ip-address $RUNNER_IP
-          
-          # 방화벽 규칙이 추가될 때까지 잠시 대기
-          echo "Waiting for firewall rule to take effect..."
-          sleep 10
-          
-          # 방화벽 규칙 목록 출력
-          echo "Current firewall rules:"
-          az postgres flexible-server firewall-rule list \
-            --resource-group $RESOURCE_GROUP \
-            --name $SERVER_NAME
 
       - name: Run tests
         run: |
