--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "alembic>=1.15.2",
+    "beautifulsoup4>=4.13.4",
     "flask>=3.1.1",
     "flask-cors>=6.0.0",
     "flask-jwt-extended>=4.7.1",
