--- a/requirements.txt
+++ b/requirements.txt
@@ -70,6 +70,10 @@ attrs==25.3.0 \
     #   aiohttp
     #   jsonschema
     #   referencing
+beautifulsoup4==4.13.4 \
+    --hash=sha256:9bbbb14bfde9d79f38b8cd5f8c7c85f4b8f2523190ebed90e950a8dea4cb1c4b \
+    --hash=sha256:dbb3c4e1ceae6aefebdaf2423247260cd062430a410e38c66f2baa50a8437195
+    # via seobi-db
 blinker==1.9.0 \
     --hash=sha256:b4ce2265a7abece45e7cc896e98dbebe6cead56bcf805a3d23136d145f5445bf \
     --hash=sha256:ba0efaa9080b619ff2f3459d1d500c57bddea4a6b424b60a91141db6fd2f08bc
@@ -542,9 +546,9 @@ langgraph-checkpoint==2.0.26 \
     # via
     #   langgraph
     #   langgraph-prebuilt
-langgraph-prebuilt==0.2.0 ; python_full_version < '4.0' \
-    --hash=sha256:1073b1fe5128f7c3d27e0ed2e9fff60be7c2cc512ef93811200dbde5fb9889aa \
-    --hash=sha256:82d653cae24d0c6f904cc6fad704447195333a8a41b877a96bf068e28ad4cf61
+langgraph-prebuilt==0.1.8 ; python_full_version < '4.0' \
+    --hash=sha256:4de7659151829b2b955b6798df6800e580e617782c15c2c5b29b139697491831 \
+    --hash=sha256:ae97b828ae00be2cefec503423aa782e1bff165e9b94592e224da132f2526968
     # via langgraph
 langgraph-sdk==0.1.70 ; python_full_version < '4.0' \
     --hash=sha256:47f2b04a964f40a610c1636b387ea52f961ce7a233afc21d3103e5faac8ca1e5 \
@@ -702,9 +706,9 @@ oauthlib==3.2.2 \
     --hash=sha256:8139f29aac13e25d502680e9e19963e83f16838d48a0d71c287fe40e7067fbca \
     --hash=sha256:9859c40929662bec5d64f34d01c99e093149682a3f38915dc0655d5a633dd918
     # via requests-oauthlib
-openai==1.79.0 \
-    --hash=sha256:d5050b92d5ef83f869cb8dcd0aca0b2291c3413412500eec40c66981b3966992 \
-    --hash=sha256:e3b627aa82858d3e42d16616edc22aa9f7477ee5eb3e6819e9f44a961d899a4c
+openai==1.81.0 \
+    --hash=sha256:1c71572e22b43876c5d7d65ade0b7b516bb527c3d44ae94111267a09125f7bae \
+    --hash=sha256:349567a8607e0bcffd28e02f96b5c2397d0d25d06732d90ab3ecbf97abf030f9
     # via
     #   langchain-openai
     #   seobi-db
@@ -1111,6 +1115,10 @@ sniffio==1.3.1 \
     # via
     #   anyio
     #   openai
+soupsieve==2.7 \
+    --hash=sha256:6e60cc5c1ffaf1cebcc12e8188320b72071e922c2e897f737cadce79ad5d30c4 \
+    --hash=sha256:ad282f9b6926286d2ead4750552c8a6142bc4c783fd66b0293547c8fe6ae126a
+    # via beautifulsoup4
 sqlalchemy==2.0.41 \
     --hash=sha256:41836fe661cc98abfae476e14ba1906220f92c4e528771a8a3ae6a151242d2ae \
     --hash=sha256:4eeb195cdedaf17aab6b247894ff2734dcead6c08f748e617bfe05bd5a218443 \
@@ -1177,6 +1185,7 @@ typing-extensions==4.13.2 \
     # via
     #   alembic
     #   anyio
+    #   beautifulsoup4
     #   langchain-core
     #   openai
     #   pydantic
@@ -1189,9 +1198,9 @@ typing-inspect==0.9.0 \
     --hash=sha256:9ee6fc59062311ef8547596ab6b955e1b8aa46242d854bfc78f4f6b0eff35f9f \
     --hash=sha256:b23fc42ff6f6ef6954e4852c1fb512cdd18dbea03134f91f856a95ccc9461f78
     # via dataclasses-json
-typing-inspection==0.4.0 \
-    --hash=sha256:50e72559fcd2a6367a19f7a7e610e6afcb9fac940c650290eed893d61386832f \
-    --hash=sha256:9765c87de36671694a67904bf2c96e395be9c6439bb6c87b5142569dcdd65122
+typing-inspection==0.4.1 \
+    --hash=sha256:389055682238f53b04f7badcb49b989835495a96700ced5dab2d8feae4b26f51 \
+    --hash=sha256:6ae134cc0203c33377d43188d4064e9b357dba58cff3185f22924610e70a9d28
     # via
     #   pydantic
     #   pydantic-settings
