📦 add: dependency langchain-mcp-adapters 패키지 추가

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "langchain-core>=0.3.61",
     "langchain-experimental>=0.3.4",
     "langchain-google-community>=2.0.7",
+    "langchain-mcp-adapters>=0.1.7",
     "langchain-openai>=0.3.17",
     "langgraph>=0.4.5",
     "openai>=1.79.0",
