--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "pytest-cov>=6.1.1",
     "pytest-ordering>=0.6",
     "python-dotenv>=1.1.0",
+    "pytz>=2025.2",
     "redis>=6.2.0",
     "sqlalchemy-utils>=0.41.2",
     "tavily-python>=0.7.2",
